--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
       layer: markerLayer,           // The layer to search within
       propertyName: 'title',        // Search field (uses marker.options.title)
       initial: false,               // Don't prefill results on startup
-      marker: true,                // Don't create a new marker when searching
+      marker: false,                // Don't create a new marker when searching
       moveToLocation: function(latlng, title, map) {
         // Define what happens when an item is found
         // Here: zoom in and center on the found marker
