--- a/index.html
+++ b/index.html
@@ -325,7 +325,8 @@
       // Add the search control to the map UI (defaults to top right)
       map.addControl(searchControl);
 
-        controlSearch.on('search_locationfound', function(event) {
+
+        searchControl.on('search_locationfound', function(event) {
         event.layer.openPopup();
         });
       });
