Comment out searchControl location found handler
Commented out the searchControl event handler for location found.

--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@
         // Define what happens when an item is found
         // Here: zoom in and center on the found marker
             map.setView(latlng, 15);
+            map.layer.fire('click');
         }
       });
         
@@ -328,9 +329,9 @@
 
      // Open Markers Popup when searched for and found
 
-      searchControl.on('search:locationfound', function(e) {
-      e.layer.fire('click'); // Automatically open popup
-      });
+//      searchControl.on('search:locationfound', function(e) {
+//      e.layer.fire('click'); // Automatically open popup
+//      });
 
       });
 
