--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     // Create the Leaflet map in "Simple CRS" mode
     // This mode uses a flat coordinate plane instead of latitude/longitude.
     // Create the Leaflet map using the SVG coordinate system
-var map = L.map('map').setView([51.505, -0.09], 13);
+var map = L.map('map').setView([51.899348015940426, 5.772192726810645], 13);
 
 L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
     attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
