Comment out terrainMap.addTo(map) line
Comment out the line that adds terrainMap to the map.

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ var terrainMap = L.tileLayer('https://tiles.stadiamaps.com/tiles/stamen_terrain_
 	ext: 'png'
 });
 
-   terrainMap.addTo(map);
+ //  terrainMap.addTo(map);
     
  //   const map = L.map('map', {
       //crs: L.CRS.Simple,
