--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ var streetMap = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
   
   streetMap.addTo(map);
 
-var terrainMap = L.tileLayer('https://tiles.stadiamaps.com/tiles/stamen_terrain_background/{z}/{x}/{y}{r}.{ext}', {
+var terrainMap2 = L.tileLayer('https://tiles.stadiamaps.com/tiles/stamen_terrain_background/{z}/{x}/{y}{r}.{ext}', {
 	minZoom: 0,
 	maxZoom: 18,
 	attribution: '&copy; <a href="https://www.stadiamaps.com/" target="_blank">Stadia Maps</a> &copy; <a href="https://www.stamen.com/" target="_blank">Stamen Design</a> &copy; <a href="https://openmaptiles.org/" target="_blank">OpenMapTiles</a> &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
@@ -213,7 +213,13 @@ var terrainMap = L.tileLayer('https://tiles.stadiamaps.com/tiles/stamen_terrain_
 });
 
  //  terrainMap.addTo(map);
-    
+    var terrainMap = L.tileLayer('https://{s}.basemaps.cartocdn.com/rastertiles/voyager_nolabels/{z}/{x}/{y}{r}.png', {
+	attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
+	subdomains: 'abcd',
+	maxZoom: 35
+});
+	   terrainMap.addTo(map);
+	  
  //   const map = L.map('map', {
       //crs: L.CRS.Simple,
  //     minZoom: -1,
