Remove commented map configuration code

--- a/index.html
+++ b/index.html
@@ -219,6 +219,10 @@ var terrainMap2 = L.tileLayer('https://tiles.stadiamaps.com/tiles/stamen_terrain
 	maxZoom: 35
 });
 	   terrainMap.addTo(map);
+
+
+	  // 51.896300040070415, 5.768743726810539 left corner bottom
+	  // 51.90076398574364, 5.788840459930832 right corner top
 	  
  //   const map = L.map('map', {
       //crs: L.CRS.Simple,
