--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@ var terrainMap2 = L.tileLayer('https://tiles.stadiamaps.com/tiles/stamen_terrain
 });
 	   terrainMap.addTo(map);
 
-const imageBounds = [[51.8943217320389, 5.76744803036467], [51.902513722275536, 5.788097624995013]];
-	  // 51.895609875105364, 5.766788634686883 left corner bottom
+const imageBounds = [[51.89462556558981, 5.761847401310146], [51.902513722275536, 5.788097624995013]];
+	  // 51.8943217320389, 5.76744803036467 left corner bottom 51.89462556558981, 5.761847401310146
 	  // 51.90076398574364, 5.788840459930832 right corner top
 	  
  //   const map = L.map('map', {
