Comment out imageBounds and svgOverlay
Comment out imageBounds and svgOverlay for debugging.

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ var terrainMap2 = L.tileLayer('https://tiles.stadiamaps.com/tiles/stamen_terrain
 });
 	   terrainMap.addTo(map);
 
-const imageBounds = [[51.89437582528647, 5.765378707570809], [51.90279080485798, 5.790349961571316]];
+// const imageBounds = [[51.89437582528647, 5.765378707570809], [51.90279080485798, 5.790349961571316]];
 	  // 51.8943217320389, 5.76744803036467 left corner bottom 51.89462556558981, 5.761847401310146
 	  // 51.90076398574364, 5.788840459930832 right corner top
 	  
@@ -239,7 +239,7 @@ const imageBounds = [[51.89437582528647, 5.765378707570809], [51.90279080485798,
     // This acts like a tile layer, but with your own map artwork.
     // Add the SVG map as image overlay
 
-    const svgOverlay = L.imageOverlay('src/map.svg', imageBounds).addTo(map);
+  //  const svgOverlay = L.imageOverlay('src/map.svg', imageBounds).addTo(map);
     
     // ============================================================
     // 3. LOAD STANDHOLDER DATA FROM JSON
