--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ var map = L.map('map').setView([51.89808547622925, 5.773899908908296], 29);
                 <h2 style="margin:0;font-size:1.1em">${stand.name}</h2>
                 <p><b>Stand:</b> ${stand.stand}</p>
                 <p style="margin:0 0 0.5em 0">${stand.description}</p>
-                ${stand.website ? `<a href="${stand.website}" target="_blank" style="color:#1976d2;text-decoration:underline;font-weight:bold;">Visit website</a>` : ''}
+         //       ${stand.website ? `<a href="${stand.website}" target="_blank" style="color:#1976d2;text-decoration:underline;font-weight:bold;">Visit website</a>` : ''}
               `);
 
               // Bind a permanent label showing the stand number
