Update Leaflet scripts and add new dependencies

--- a/index.html
+++ b/index.html
@@ -158,8 +158,10 @@
   
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-search@2.9.9/dist/leaflet-search.min.js"></script>
-  
-  <script>
+ <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+<script src="https://unpkg.com/leaflet-path-drag/leaflet.path.drag.js"></script>
+<script src="https://unpkg.com/leaflet-path-transform/dist/L.Path.Transform.js"></script>
+<script>
         // ============================================================
     // Since we’re overlaying an SVG image (not a real map),
     // we use Leaflet’s “CRS.Simple” coordinate system.
