--- a/index.html
+++ b/index.html
@@ -198,6 +198,8 @@
     // Create the Leaflet map in "Simple CRS" mode
     // This mode uses a flat coordinate plane instead of latitude/longitude.
     // Create the Leaflet map using the SVG coordinate system
+
+
 var map = L.map('map').setView([51.89808547622925, 5.773899908908296], 29);
 
 var streetMap = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
@@ -266,6 +268,7 @@ var terrainMap2 = L.tileLayer('https://tiles.stadiamaps.com/tiles/stamen_terrain
         // Function to show/hide markers based on zoom level
         function showMarkersIfZoom() {
 
+			
           // Remove old markers before redrawing (prevents duplicates)
           markerLayer.clearLayers();
 
@@ -279,6 +282,25 @@ var terrainMap2 = L.tileLayer('https://tiles.stadiamaps.com/tiles/stamen_terrain
 
             standholders.forEach(stand => {
 
+					function getRectangleBounds(rCenter, rWidthMeters, rHeightMeters) {
+  var rLat = rCenter[0], rLng = rCenter[1];
+  var rLatDiff = (rHeightMeters / 2) / 111320;
+  var rLngDiff = (rWidthMeters / 2) / (111320 * Math.cos(rLat * Math.PI / 180));
+  return [
+    [rLat - rLatDiff, rLng - rLngDiff], // SW
+    [rLat + rLatDiff, rLng + rLngDiff]  // NE
+  ];
+}
+
+var rCenter = [stand.y, stand.x]; // Your preferred center (latitude, longitude)
+var rBounds = getRectangleBounds(rCenter, 6, 6);
+
+var rectangle = L.rectangle(rBounds, {color: "#ff7800", weight: 1}).addTo(map);
+
+// Enable dragging and rotation (requires plugins)
+if (rectangle.dragging) rectangle.dragging.enable(); // Leaflet.Path.Drag
+if (rectangle.transform) rectangle.transform.enable({rotation: true, scaling: false}); // Leaflet.Path.Transform
+				
               // Leaflet uses [lat, lng], so in our flat system: [y, x]
               // Convert SVG x/y to Leaflet pseudo-lat/lng
 
