--- a/index.html
+++ b/index.html
@@ -348,34 +348,40 @@ function getRectangleCorners(center, width, height, angleDeg) {
               // Add this marker to the group
               markerLayer.addLayer(marker);
 				
-				 // Initial rectangle corners (unrotated)
-  var rectCorners = getRectangleCorners([stand.y, stand.x], 6, 6, 0);
-  var rectangle = L.polygon(rectCorners, {color: "#1976d2", weight: 1}).addTo(map);
+// Initial rectangle corners (unrotated)
+var rectCorners = getRectangleCorners([stand.y, stand.x], 6, 6, 0);
+// Add polygon to map
+var rectangle = L.polygon(rectCorners, {color: "#1976d2", weight: 1}).addTo(map);
 
-  // --- Sync rectangle on marker drag ---
-  marker.on('move', function(e) {
-    var center = [e.latlng.lat, e.latlng.lng];
-    // Get current rectangle rotation (stored as property)
-    var angle = rectangle._angle || 0;
-    var newCorners = getRectangleCorners(center, 6, 6, angle);
-    rectangle.setLatLngs(newCorners);
-    rectangle._center = center;
-  });
-console.log(rectangle.transform); // Should not be undefined
-  // --- Enable rotation via path-transform plugin ---
+// --- Defensive: Only enable transform if available ---
+if (rectangle.transform && typeof rectangle.transform.enable === 'function') {
   rectangle.transform.enable({rotation: true, scaling: false});
-  rectangle._center = [stand.y, stand.x];
-  rectangle._angle = 0;
+} else {
+  console.warn("Leaflet.Path.Transform plugin not loaded or not attached to polygon.");
+}
 
-  // When rectangle is rotated, update its stored angle and redraw at correct center
-  rectangle.on('transformed', function(e) {
-    // e.layer.transform._rotation is in radians
-    var angle = e.layer.transform._rotation * (180/Math.PI);
-    rectangle._angle = angle;
-    var center = rectangle._center || [stand.y, stand.x];
-    var newCorners = getRectangleCorners(center, 6, 6, angle);
-    rectangle.setLatLngs(newCorners);
-  });
+// Rectangle "virtual center" and angle
+rectangle._center = [stand.y, stand.x];
+rectangle._angle = 0;
+
+// --- Sync rectangle on marker drag ---
+marker.on('move', function(e) {
+  var center = [e.latlng.lat, e.latlng.lng];
+  var angle = rectangle._angle || 0;
+  var newCorners = getRectangleCorners(center, 6, 6, angle);
+  rectangle.setLatLngs(newCorners);
+  rectangle._center = center;
+});
+
+// --- Sync rotation: update angle and redraw ---
+rectangle.on('transformed', function(e) {
+  // e.layer.transform._rotation is in radians
+  var angle = e.layer.transform._rotation * (180/Math.PI);
+  rectangle._angle = angle;
+  var center = rectangle._center || [stand.y, stand.x];
+  var newCorners = getRectangleCorners(center, 6, 6, angle);
+  rectangle.setLatLngs(newCorners);
+});
             });   // ends forEach
           }       // ends if
         }         // ends function showMarkersIfZoom
