Update Leaflet stylesheet link to latest version

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- ============================================
        LEAFLET CORE STYLESHEET (required)
        ============================================ -->
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
 <link rel="stylesheet" href="https://unpkg.com/leaflet-search@2.9.9/dist/leaflet-search.min.css"/>
 
   <style>
