--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   <div id="map"></div>
   <div class="title-overlay">4x4 Vakantiebeurs</div>
 
-	<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+	<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 	<script src="https://unpkg.com/leaflet-search@2.9.9/dist/leaflet-search.min.js"></script>
 	<script src="https://unpkg.com/leaflet-path-drag/leaflet.path.drag.js"></script>
 	<script src="https://unpkg.com/leaflet-path-transform/dist/L.Path.Transform.js"></script>
