Replace L.Path.Transform with Leaflet.Editable

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 <body>
 <div id="map" style="height:400px"></div>
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-<script src="https://unpkg.com/leaflet-path-transform/dist/L.Path.Transform.js"></script>
+  <script src="https://unpkg.com/leaflet-editable@1.2.0/src/Leaflet.Editable.js"></script>
 <script>
 console.log("Leaflet version:", L.version);
-console.log("Is Path.Transform loaded?", typeof L.Path.Transform); // Should be 'function' or 'object'
 </script>
 </body>
 </html>
