--- a/index.html
+++ b/index.html
@@ -4,20 +4,27 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
   <style>
     #map { height: 100vh; }
-    .rotate-handle { background: red; border-radius: 50%; width: 14px; height: 14px; }
+    .rotate-handle { background: red; border-radius: 50%; width: 16px; height: 16px; }
   </style>
 </head>
 <body>
 <div id="map"></div>
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 <script>
-var map = L.map('map').setView([51.5, -0.09], 16);
+var map = L.map('map').setView([51.5, -0.09], 19);
+
+// OSM tile
 L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
 
-function getRectangleCorners(center, width, height, angleDeg) {
+// Utility: meters to degrees (approx for small distances)
+function metersToLat(m) { return m / 111320; }
+function metersToLng(m, lat) { return m / (40075000 * Math.cos(lat * Math.PI / 180) / 360); }
+
+function getRectangleCorners(center, width_m, height_m, angleDeg) {
+  var lat = center[0], lng = center[1];
+  var halfW = metersToLng(width_m, lat) / 2;
+  var halfH = metersToLat(height_m) / 2;
   var angleRad = angleDeg * Math.PI / 180;
-  var halfW = width / 2;
-  var halfH = height / 2;
   var corners = [
     [-halfH, -halfW], // SW
     [-halfH, halfW],  // SE
@@ -25,33 +32,34 @@ function getRectangleCorners(center, width, height, angleDeg) {
     [halfH, -halfW],  // NW
   ];
   return corners.map(function(offset) {
-    var lat = center[0] + (offset[0] * Math.cos(angleRad) - offset[1] * Math.sin(angleRad));
-    var lng = center[1] + (offset[0] * Math.sin(angleRad) + offset[1] * Math.cos(angleRad));
-    return [lat, lng];
+    var dLat = offset[0], dLng = offset[1];
+    var rotLat = dLat * Math.cos(angleRad) - dLng * Math.sin(angleRad);
+    var rotLng = dLat * Math.sin(angleRad) + dLng * Math.cos(angleRad);
+    return [lat + rotLat, lng + rotLng];
   });
 }
 
-// Initial state
+// Initial state: center marker, dimensions, angle
 var center = [51.5, -0.09];
-var width = 0.001;
-var height = 0.001;
-var angle = 0;
+var width = 6;    // meters
+var height = 6;   // meters
+var angle = 0;    // degrees
 
 var corners = getRectangleCorners(center, width, height, angle);
 var rect = L.polygon(corners, {color: "blue", weight: 2}).addTo(map);
 
-// Center marker: use Leaflet's default (blue pin) marker
+// Center marker: built-in Leaflet blue pin
 var centerMarker = L.marker(center, {
   draggable: true
 }).addTo(map);
 
-// Rotation handle on NE corner (custom red dot)
+// Rotation handle on NE corner (red dot)
 var handleMarker = L.marker(corners[2], {
   draggable: true,
-  icon: L.divIcon({className: 'rotate-handle', iconSize: [14, 14]})
+  icon: L.divIcon({className: 'rotate-handle', iconSize: [16, 16]})
 }).addTo(map);
 
-// When center marker dragged, move rectangle and handle
+// Move rectangle and handle when center marker is dragged
 centerMarker.on('drag', function(e) {
   center = [e.latlng.lat, e.latlng.lng];
   corners = getRectangleCorners(center, width, height, angle);
@@ -59,12 +67,12 @@ centerMarker.on('drag', function(e) {
   handleMarker.setLatLng(corners[2]);
 });
 
-// When rotation handle dragged, compute new angle
+// Rotate rectangle when handle is dragged
 handleMarker.on('drag', function(e) {
   var handleLatLng = e.latlng;
   var cy = center[0], cx = center[1];
   var hy = handleLatLng.lat, hx = handleLatLng.lng;
-  // Angle between center and handle
+  // Angle between center and handle (adjust -45 due to rectangle orientation)
   var newAngle = Math.atan2(hy - cy, hx - cx) * 180 / Math.PI - 45;
   angle = newAngle;
   corners = getRectangleCorners(center, width, height, angle);
@@ -72,7 +80,7 @@ handleMarker.on('drag', function(e) {
   handleMarker.setLatLng(corners[2]);
 });
 
-// Optional: keep handle and rectangle in sync after drag ends
+// Keep handle in sync after drag ends
 handleMarker.on('dragend', function() {
   handleMarker.setLatLng(getRectangleCorners(center, width, height, angle)[2]);
 });
