--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="map"></div>
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 <script>
-var map = L.map('map').setView([51.5, -0.09], 19);
+var map = L.map('map').setView([51.898819375615844, 5.7732504428013165], 19);
 
 // OSM tile
 L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
