--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ function getRectangleCorners(center, width_m, height_m, angleDeg) {
 }
 
 // Initial state: center marker, dimensions, angle
-var center = [51.5, -0.09];
+var center = [51.898819375615844, 5.7732504428013165];
 var width = 6;    // meters
 var height = 6;   // meters
 var angle = 0;    // degrees
